--- a/base.css
+++ b/base.css
@@ -11,8 +11,7 @@
     --window-tint: #0005;
     /*--window-tint: #0000;*/
 
-    /* Theme Background, replace with none if you want transparency*/
-    /*--theme-background-image: url(https://github.com/computer-catt/PurplePrune/blob/main/Assets/NightTheme.webp?raw=true);*/
+    /* Theme Background (if you want) */
     /*--theme-background-image: none;*/
 
     /* Unthemed popouts color*/
@@ -36,7 +35,7 @@
     --__header-bar-background: #000 !important;
 }   /* end of config header */
 
-/* set background image */ html {background: var(--theme-background-image); background-size: contain; image-rendering: pixelated}
+/* set background image */ html {background: var(--theme-background-image); image-rendering: pixelated}
 /* set tint */ body { background: var(--window-tint) !important; image-rendering: auto;}
 /* voice chat fixes */ .root_bfe55a, .callContainer_cb9592 {background: 0 0;}
 /* i dont member */ .avatarUploaderInnerSquareDisabled_e04502 {background-color: #00000050;}
